# FIP-HRM

./: .gitignore  README.md  docker-compose.yml  nginx.conf
HRM-system-ZERNO-/backend/: .env_example  Dockerfile  nohup.out  pyproject.toml
HRM-system-ZERNO-/backend/alembic/: env.py
HRM-system-ZERNO-/backend/alembic/versions/: 84b49ee8e691_initial_db.py  bccd1e6c7daf_reset_password.py
HRM-system-ZERNO-/backend/app/: config.py  main.py
HRM-system-ZERNO-/backend/app/alembic/: env.py
HRM-system-ZERNO-/backend/app/alembic/versions/: 1238e444e0bb_add_waiter_model.py  2a0fed2ae92a_initial_migration.py  bb94a43f88c7_initial_db.py  c312fdaffbcc_user_schema.py
HRM-system-ZERNO-/backend/app/api/: dependencies.py
HRM-system-ZERNO-/backend/app/api/routes/: authentication.py  config_json.py  main.py  stats.py
HRM-system-ZERNO-/backend/app/db/: db.py
HRM-system-ZERNO-/backend/app/model/: __init__.py  category.py  feedback_type.py  feedbacks.py  role.py  tags.py  user.py  waiter_score.py
HRM-system-ZERNO-/backend/app/model/emps/: comments.py  contacts.py  feedbacks.py  rating.py  waiters.py
HRM-system-ZERNO-/backend/app/model/public/: category.py  contacts.py  feedback_type.py  feedbacks.py  rating.py  (+6 more)
HRM-system-ZERNO-/backend/app/repository/: base.py
HRM-system-ZERNO-/backend/app/schema/: authentication.py
HRM-system-ZERNO-/backend/app/service/: authentication.py  stats.py  telegram_bot.py
HRM-system-ZERNO-/backend/telegram-bot/: main.py
feedback-agent/: pyproject.toml
feedback-agent/app/: agent.py  main.py  promp_template.py  schemas.py  tools.py
(+201 files in other folders)
