[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aidin <aidinror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
alembic = "^1.14.0"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.27.2"
aiogram = "^3.15.0"
locust = "^2.32.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
